# CProgramSummary

./: .gitignore  Codes  README.md  main.c
Array/: 01array_basics.c  02array_limits.c  03string.c  04array_parameter.c  052d_array.c  06shuffle_array.c
Array/include/: io_utils.h
Base/: 01-function_basics.c  02-proto_type.c  03-variable_type_and_scope.c  04-varargs.c  05-recursion.c  06-hanoi.c  CMakeLists.txt  test.c
ComplexDataType/: 01struct.c  02memory_align.c  03union.c  04enum.c  05byte_order.c  06linked_list.c  CMakeLists.txt  main.c
ComplexDataType/images/: c.txt
ComplexDataType/include/: io_utils.h
DataType/: 01data_type.c  02data_type_char.c  03data_type_float.c  04value.c  05constant.c  06operators.c  07condition.c  08loop.c  CMakeLists.txt  a1.c  guess_number.c
File/: 01io_basics.c  02setbuf.c  03read_write_a_character.c  04copy_file_1.c  05read_write_a_line.c  06copy_file_2.c  main.c
File/data/: io_utils.h  sanguo_gbk.txt
File/include/: io_utils.h  time_utils.h
Pointer/: 01pointer_basics.c  02readonly_pointer.c  03pointer_values.c  04pointer_operarions.c  05lvalue_rvalue.c  06pointer_parameter_as_return_value.c  07dynamic_memory.c  08function_pointer.c  09swap_values.c  CMakeLists.txt  main.c
Pointer/include/: io_utils.h
String/: 01charactor_type.c  02conversion.c  03string_length_compare.c  04find_char_and_substring.c  05string_tokenize.c  06string_concat_copy.c  07mem_op.c  main.c
String/include/: io_utils.h
Time/: 01basic_time.c  02get_sys_time.c  03calendar.c  04format_time.c  05parse_time.c  06time_diff.c  CMakeLists.txt  main.c
Time/include/: io_utils.h  time_utils.h
macro/: 01file_include.c  02my_include_file_c.c  03macro_function.c  04conditional_macro.c  05printf.c  CMakeLists.txt  main.c
macro/include/: factorial.h
macro/src/: factorial.c
markdowns/: C语言必备基础.md  GUI初步.md  一、C语言快速入门.md  七、字符串.md  三、预处理与宏.md  九、文件.md  习题.md  二、函数与程序结构.md  五、指针.md  八、时间.md  六、复杂数据类型.md  四、数组.md  解惑.md
markdowns/pictures/: src=http%3A%2F%2Fwww.pianshen.com%2Fimages%2F359%2F1f6e696a2c3920b09785161fa7631d47.png&refer=http%3A%2F%2Fwww.pianshen.com&app=2002&size=f9999,10000&q=a80&n=0&g=0n&fmt=auto
test/: 1.txt
